--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom:50px;
 }
 .rimg{
     margin-left: 140px;
